--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="author" content="name goes here">
 <meta charset="UTF-8">
 <link type="text/css" rel="stylesheet" href="style.css">
-<title>my portfolio</title>
+<title>Lihan's Lived Experiences Project</title>
 </head>
 <body>
 	<content>
