About Me Update

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 		</header>
 		<main>
 			<h1>about me</h1>
-			<p>blah, blah, blah...</p>
+			<p>My name is Lihan Zhu</p>
+                        <p>Frist time Hithub...</p>
+                        <p>Msu</p>                  
+                        <p>South</p>
+                        <p>Like Dogs (Lab!!!)</p>
+                        
 		</main>
 		<footer>
 		<p>&copy; 2013 [Name goes here]</p>
