--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link type="text/css" rel="stylesheet" href="style.css">
 <title>Lihan's Lived Experiences Project</title>
 </head>
-<body>
+<body> <body style="background:#7788E8">
 	<content>
 		<header>
 		<h2>my portfolio</h2>
@@ -25,7 +25,7 @@
 			<p>My name is Lihan Zhu</p>
                         <p>Frist time Hithub...</p>
                         <p>Msu</p>                  
-                        <p>South</p>
+                        <p>South hubbard</p>
                         <p>Like Dogs (Lab!!!)</p>
                         
 		</main>
