--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link type="text/css" rel="stylesheet" href="style.css">
 <title>Lihan's Lived Experiences Project</title>
 </head>
-<body style="background:#13950C">
+<body style="background:#330C95">
 	<content>
 		<header>
 		<h2>my portfolio</h2>
