--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <meta name="author" content="name goes here">
 <meta charset="UTF-8">
 <link type="text/css" rel="stylesheet" href="style.css">
-<title>Lihan's Lived Experiences Project</title>
+<title>Lihan Production</title>
 </head>
 <body style="background:#330C95">
 	<content>
 		<header>
 		<h2>my portfolio</h2>
 		<ul id="nav">
-			<li><a href="index.html">home</a></li>
+			<li syle="font-size:30px"><a href="index.html">home</a></li>
 			<li><a href="lived.html">lived <br />experiences</a></li>
 			<li><a href="#">cultural <br />analysis</a></li>
 			<li><a href="#">formal <br />research</a></li>
