--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<header>
 		<h2>my portfolio</h2>
 		<ul id="nav">
-			<li syle="font-size:30px"><a href="index.html">home</a></li>
+			<li style="font-size:30px"><a href="index.html">home</a></li>
 			<li><a href="lived.html">lived <br />experiences</a></li>
 			<li><a href="#">cultural <br />analysis</a></li>
 			<li><a href="#">formal <br />research</a></li>
