--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 		<header>
 		<h2>my portfolio</h2>
 		<ul id="nav">
-			<li style="font-size:30px"><a href="index.html">home</a></li>
-			<li><a href="lived.html">lived <br />experiences</a></li>
-			<li><a href="#">cultural <br />analysis</a></li>
-			<li><a href="#">formal <br />research</a></li>
-			<li><a href="#">remix</a></li>
-			<li><a href="#">course <br />retrospective</a></li>
-			<li><a href="#">blog</a></li>
+			<li style="font-size:50px; color:gold"><a href="index.html">home</a></li>
+			<li style="font-size:50px;color:gold"><a href="lived.html">lived <br />experiences</a></li>
+			<li style="font-size:50px;color:gold"><a href="#">cultural <br />analysis</a></li>
+			<li style="font-size:50px;color:gold"><a href="#">formal <br />research</a></li>
+			<li style="font-size:50px;color:gold"><a href="#">remix</a></li>
+			<li style="font-size:50px;color:gold"><a href="#">course <br />retrospective</a></li>
+			<li style="font-size:50px;color:gold"><a href="#">blog</a></li>
 		</ul>
 		</header>
 		<main>
