--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 		<header>
 		<h2>my portfolio</h2>
 		<ul id="nav">
-			<li style="font-size:50px; color:#FFD700"><a href="index.html">home</a></li>
-			<li style="font-size:50px;color:#FFD700"><a href="lived.html">lived <br />experiences</a></li>
-			<li style="font-size:50px;color:#FFD700"><a href="#">cultural <br />analysis</a></li>
-			<li style="font-size:50px;color:#FFD700"><a href="#">formal <br />research</a></li>
-			<li style="font-size:50px;color:#FFD700"><a href="#">remix</a></li>
-			<li style="font-size:50px;color:#FFD700"><a href="#">course <br />retrospective</a></li>
-			<li style="font-size:50px;color:#FFD700"><a href="#">blog</a></li>
+			<li style="font-size:50px;" ><a href="index.html"><style="color:#FFD700"home</a></li>
+			<li style="font-size:50px;"><a href="lived.html">lived <br />experiences</a></li>
+			<li style="font-size:50px;"><a href="#">cultural <br />analysis</a></li>
+			<li style="font-size:50px;"><a href="#">formal <br />research</a></li>
+			<li style="font-size:50px;"><a href="#">remix</a></li>
+			<li style="font-size:50px;"><a href="#">course <br />retrospective</a></li>
+			<li style="font-size:50px;"><a href="#">blog</a></li>
 		</ul>
 		</header>
 		<main>
