--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 	<content>
 		<header>
 		<h2>my portfolio</h2>
-		<ul id="nav">
-			<li style="font-size:50px;" ><a href="index.html"><style="color:#FFD700"home</a></li>
-			<li style="font-size:50px;"><a href="lived.html">lived <br />experiences</a></li>
-			<li style="font-size:50px;"><a href="#">cultural <br />analysis</a></li>
-			<li style="font-size:50px;"><a href="#">formal <br />research</a></li>
-			<li style="font-size:50px;"><a href="#">remix</a></li>
-			<li style="font-size:50px;"><a href="#">course <br />retrospective</a></li>
-			<li style="font-size:50px;"><a href="#">blog</a></li>
+		<ul id="nav" >
+			<li style="font-size:50px;" ><a href="index.html"><font color="#FFD700">home</font></a></li>
+			<li style="font-size:50px;"><a href="lived.html"><font color="#FFD700">lived <br />experiences</font></a></li>
+			<li style="font-size:50px;"><a href="#"><font color="#FFD700">cultural <br />analysis</font></a></li>
+			<li style="font-size:50px;"><a href="#"><font color="#FFD700">formal <br />research</font></a></li>
+			<li style="font-size:50px;"><a href="#"><font color="#FFD700">remix</font></a></li>
+			<li style="font-size:50px;"><a href="#"><font color="#FFD700">course <br />retrospective</font></a></li>
+			<li style="font-size:50px;"><a href="#"><font color="#FFD700">blog</font></a></li>
 		</ul>
 		</header>
 		<main>
