--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <head>
 <meta name="description" content="Basic Portfolio">
-<meta name="author" content="name goes here">
+<meta name="author" content="Lihan Zhu">
 <meta charset="UTF-8">
 <link type="text/css" rel="stylesheet" href="style.css">
 <title>Lihan Production</title>
@@ -30,7 +30,7 @@
                         
 		</main>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [Lihan Zhu]</p>
 		</footer>
 	</content>
 </body>	
