--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <meta name="description" content="Basic Portfolio">
 <meta name="author" content="name goes here">
 <meta charset="UTF-8">
-<title>lived experiences project | my portfolio</title>
+<title>Blog | my portfolio</title>
 <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
