--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<li style="font-size:12px;"><a href="#"><font color="#FFD700">formal <br />research</font></a></li>
 			<li style="font-size:12px;"><a href="#"><font color="#FFD700">remix</font></a></li>
 			<li style="font-size:12px;"><a href="#"><font color="#FFD700">course <br />retrospective</font></a></li>
-			<li style="font-size:12px;"><a href="#"><font color="#FFD700">blog</font></a></li>
+			<li style="font-size:12px;"><a href="blog.html"><font color="#FFD700">blog</font></a></li>
 		</ul>
 		</header>
 		<main>
