--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,21 @@
 	<main>
 		<h1>lived experiences project title</h1>
 		<p>blah, blah, blah...</p>
+<!DOCTYPE html>
+<html>
+<body>
+
+<video width="320" height="240" controls autoplay>
+  <source src="http://www.youtube.com/watch?feature=player_detailpage&v=KYa0wi4XzeI" type="video/ogg">
+  <source src="http://www.youtube.com/watch?feature=player_detailpage&v=KYa0wi4XzeI" type="video/mp4">
+  <object data="movie.mp4" width="320" height="240">
+    <embed width="320" height="240" src="movie.swf">
+  </object>
+</video>
+
+</body>
+</html>
+
 	</main>
 	<footer>
 		<p>&copy; 2013 [Name goes here]</p>
