--- a/blog.html
+++ b/blog.html
@@ -27,8 +27,8 @@
 <body>
 
 <video width="320" height="240" controls autoplay>
-  <source src="http://www.youtube.com/watch?feature=player_detailpage&v=KYa0wi4XzeI" type="video/ogg">
-  <source src="http://www.youtube.com/watch?feature=player_detailpage&v=KYa0wi4XzeI" type="video/mp4">
+  <source src="<iframe width="640" height="360" src="http://www.youtube.com/embed/KYa0wi4XzeI?feature=player_detailpage" frameborder="0" allowfullscreen></iframe>" type="video/ogg">
+  <source src="<iframe width="640" height="360" src="http://www.youtube.com/embed/KYa0wi4XzeI?feature=player_detailpage" frameborder="0" allowfullscreen></iframe>" type="video/mp4">
   <object data="movie.mp4" width="320" height="240">
     <embed width="320" height="240" src="movie.swf">
   </object>
