--- a/blog.html
+++ b/blog.html
@@ -25,10 +25,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<iframe width="640" height="340"
-src="http://www.youtube.com/watch?feature=player_detailpage&v=KYa0wi4XzeI">
-</iframe>
+<embed
+width="420" height="345"
+src="http://www.youtube.com/watch?feature=player_detailpage&v=KYa0wi4XzeI"
+type="application/x-shockwave-flash">
+</embed>
 
 </body>
 </html>
