--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
 <body>
 <embed
 width="640" height="360"
-src="http://www.youtube.com/embed/KYa0wi4XzeI"
+src="http://www.youtube.com/watch?feature=player_detailpage&v=KYa0wi4XzeI"
 type="application/x-shockwave-flash">
 </embed>
 
