--- a/lived.html
+++ b/lived.html
@@ -2,7 +2,7 @@
 <head>
 <meta name="description" content="Basic Portfolio">
 <meta name="author" content="name goes here">
-<meta charset="UTF-8">
+<meta charset="UTF-8"><meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
 <title>lived experiences project | my portfolio</title>
 <link type="text/css" rel="stylesheet" href="style.css">
 </head>
