--- a/lived.html
+++ b/lived.html
@@ -20,7 +20,7 @@
 		</ul>
 	</header>
 
-<main><h1> Lived experiences project: Chemical Physics, Television and I</h1>
+<main><align="middle"><h1> Lived experiences project: Chemical Physics, Television and I</h1>
 
 <p>This Lived experiences project is written not only for you but also for me. It will help you know my Chemical Physics major better and know me better. For example, analyzing the questions like <front color="#00FF00">What is my major?</font>, <front color="#00FF00">What careers my major will cause me turn in to?</font> will give you some information and views about Chemical Physics. This project also can help me get some confidence about my major. Because not only I am going to tell the audiences the reason that I choose the major but also telling myself the reason. In another word, I have to pursue myself before telling the benefits about my major to others. I will be focusing on trying to argue why I choose my major and what technology impacted me to choose my academic path.</p>
 <P>My major is Chemical Physics. Being a Chemical Physical student, I will combine the study of physical chemistry with atomic and molecular physics to focus on the structures and structural changes of substances and topics of instruction include quantum theory, classical mechanics, and the rate of chemical reactions, laser physics, and more.</p>
