--- a/lived.html
+++ b/lived.html
@@ -6,7 +6,7 @@
 <title>lived experiences project | my portfolio</title>
 <link type="text/css" rel="stylesheet" href="style.css">
 </head>
-<body fontFamily="Impact,Charcoal,sans-serif">
+<body style="font-family:cursive;">
 	<header>
 		<h1>my portfolio</h1>
 		<ul id="nav">
