--- a/blog.html
+++ b/blog.html
@@ -20,8 +20,8 @@
 		</ul>
 	</header>
 	<main>
-		<h1>lived experiences project title</h1>
-		<p>blah, blah, blah...</p>
+		<h1>It gets Better</h1>
+		<iframe width="480" height="360" src="//www.youtube.com/embed/KYa0wi4XzeI" frameborder="0" allowfullscreen></iframe><p>blah, blah, blah...</p>
 <!DOCTYPE html>
 <html>
 <body>
