--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
 	</header>
 	<main>
 		<h1>It gets Better</h1>
-		<iframe width="480" height="360" src="//www.youtube.com/embed/KYa0wi4XzeI" frameborder="0" allowfullscreen></iframe><p>blah, blah, blah...</p>
+		<iframe width="480" height="360" src="//www.youtube.com/embed/KYa0wi4XzeI" frameborder="0" allowfullscreen></iframe>
 
 
 
