--- a/blog.html
+++ b/blog.html
@@ -1,32 +1,29 @@
 <!DOCTYPE HTML>
 <head>
 <meta name="description" content="Basic Portfolio">
-<meta name="author" content="name goes here">
+<meta name="author" content="Lihan Zhu">
 <meta charset="UTF-8">
-<title>Blog | my portfolio</title>
 <link type="text/css" rel="stylesheet" href="style.css">
+<title>Lihan Production</title>
 </head>
-<body>
-	<header>
-		<h1>my portfolio</h1>
-		<ul id="nav">
-			<li><a href="index.html">home</a></li>
-			<li><a href="lived.html">lived <br />experiences</a></li>
-			<li><a href="#">cultural <br />analysis</a></li>
-			<li><a href="#">formal <br />research</a></li>
-			<li><a href="#">remix</a></li>
-			<li><a href="#">course <br />retrospective</a></li>
-			<li><a href="blog.html">blog</a></li>
+<body style="background:#330C95">
+	<content>
+		<header>
+		<h2>my portfolio</h2>
+		<ul id="nav" >
+			<li style="font-size:12px;" ><a href="index.html"><font color="#FFD700">home</font></a></li>
+			<li style="font-size:12px;"><a href="lived.html"><font color="#FFD700">lived <br />experiences</font></a></li>
+			<li style="font-size:12px;"><a href="#"><font color="#FFD700">cultural <br />analysis</font></a></li>
+			<li style="font-size:13px;"><a href="#"><font color="#FFD700">formal <br />research</font></a></li>
+			<li style="font-size:12px;"><a href="#"><font color="#FFD700">remix</font></a></li>
+			<li style="font-size:12px;"><a href="#"><font color="#FFD700">course <br />retrospective</font></a></li>
+			<li style="font-size:12px;"><a href="blog.html"><font color="#FFD700">blog</font></a></li>
 		</ul>
-	</header>
-	<main>
-		<h1>It gets Better</h1>
-		<iframe width="480" height="360" src="//www.youtube.com/embed/KYa0wi4XzeI" frameborder="0" allowfullscreen></iframe>
-
-
-
-
-	</main>
-	<footer>
-		<p>&copy; 2013 [Name goes here]</p>
-	</footer>
+		</header>
+		<main>
+			
+		</main>
+		<footer>
+		<p>&copy; 2013 [Lihan Zhu]</p>
+		</footer>
+	</content>
