--- a/blog.html
+++ b/blog.html
@@ -21,9 +21,15 @@
 		</ul>
 		</header>
 		<main>
-			
+			<h1>about me</h1>
+			<p>My name is Lihan Zhu</p>
+                        <p>Frist time Hithub...</p>
+                        <p>Msu</p>                  
+                        <p>South hubbard</p>
+                        <p>Like Dogs (Lab!!!)</p>
+                        
 		</main>
 		<footer>
 		<p>&copy; 2013 [Lihan Zhu]</p>
 		</footer>
-	</content>
+	</content
