--- a/blog.html
+++ b/blog.html
@@ -21,13 +21,7 @@
 		</ul>
 		</header>
 		<main>
-			<h1>about me</h1>
-			<p>My name is Lihan Zhu</p>
-                        <p>Frist time Hithub...</p>
-                        <p>Msu</p>                  
-                        <p>South hubbard</p>
-                        <p>Like Dogs (Lab!!!)</p>
-                        
+			<iframe width="480" height="360" src="//www.youtube.com/embed/KYa0wi4XzeI" frameborder="0" allowfullscreen></iframe>
 		</main>
 		<footer>
 		<p>&copy; 2013 [Lihan Zhu]</p>
