--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
 		</ul>
 		</header>
 		<main>
-			<iframe width="480" height="360" src="//www.youtube.com/embed/KYa0wi4XzeI" frameborder="0" allowfullscreen></iframe>
+			<h1 style="color:yellow">It Gets Better</h1>
 		</main>
 		<footer>
 		<p>&copy; 2013 [Lihan Zhu]</p>
