--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
 <title>Lihan Production</title>
 </head>
 <body style="background:#330C95">
-	<content><h1 style="color:yellow">It Gets Better</h1>
+	<content>
 		<header>
 		<h2>my portfolio</h2>
 		<ul id="nav" >
