--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,8 @@
 		</header>
 		<main>
 			<h1 style="color:yellow">It Gets Better</h1>
-		</main>
+<p> The purpose of the is to express his love and miss on his uncle. He also wants to encouage gay people no matter now or later having difficulity should keep beliving in life. And he wants to tell them everything will get better!
+<p> Authur is expressing his miss on his uncle by telling people his letteras a speech in the vedio </p>		</main>
 		<footer>
 		<p>&copy; 2013 [Lihan Zhu]</p>
 		</footer>
