--- a/lived.html
+++ b/lived.html
@@ -6,7 +6,7 @@
 <title>lived experiences project | my portfolio</title>
 <link type="text/css" rel="stylesheet" href="style.css">
 </head>
-<body style="font-family:cursive;font-size:22px;">
+<body style="font-family:cursive;font-size:22px;background-image:url(http://www.wallcg.com/images/2013/03/new-ipad-hd-20482048-557-daily-iphone-blog.jpg)">
 	<header>
 		<h1>my portfolio</h1>
 		<ul id="nav">
