--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,11 @@
 <p> The purpose of the is to express his love and miss on his uncle. He also wants to encouage gay people no matter now or later having difficulity should keep beliving in life. And he wants to tell them everything will get better!
 <p> Authur plays some shots of several blackborad with some sentences about what he is going to speech. Then he expresses his miss on his uncle by telling people his letteras a speech in the vedio. In another way to say is auther using pictures first. Then he plays  his vedio speech </p>		</main>
 <p> This Veido's structure teaches me that I can use different ways like writting, showing picture or music to express my purpose about my life experience project.<footer>
-		<p>&copy; 2013 [Lihan Zhu]</p>
+		
+
+
+<h2>9/28/2013</h2>
+<h1 style="color:blue">The Social Network</hi?<div aligan="middle"><iframe width="560" height="315" src="//www.youtube.com/embed/lB95KLmpLR4" frameborder="0" allowfullscreen></iframe></div>
+<p>&copy; 2013 [Lihan Zhu]</p>
 		</footer>
 	</content
