--- a/cultural analysis.html
+++ b/cultural analysis.html
@@ -121,9 +121,9 @@ if (browserok) {
 
 
 </style> 
-<body style="background-image:url(http://heartprintseducation.files.wordpress.com/2012/06/web-background-ver-1.jpg);font-family:Arial Rounded MT Bold;font-size:22px;">
-	<content>div
-{cursor:url(smiley.gif),url(myBall.cur),auto;}
+<body style="background-image:url(http://heartprintseducation.files.wordpress.com/2012/06/web-background-ver-1.jpg);font-family:Arial Rounded MT Bold;font-size:22px;div{cursor:url(smiley.gif),url(myBall.cur),auto;}">
+	<content>
+
 		<header>
 		<h2>my portfolio</h2>
 		<ul id="nav" >
