--- a/cultural analysis.html
+++ b/cultural analysis.html
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML>
 <head>
+div
+<cursor:url(smiley.gif),url(myBall.cur),auto;>
 <meta name="description" content="Basic Portfolio">
 <meta name="author" content="Lihan Zhu">
 <meta charset="UTF-8">
