--- a/cultural analysis.html
+++ b/cultural analysis.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <head>
-div
-<cursor:url(smiley.gif),url(myBall.cur),auto;>
+
+<div>cursor:url(smiley.gif),url(myBall.cur),auto;</div>
 <meta name="description" content="Basic Portfolio">
 <meta name="author" content="Lihan Zhu">
 <meta charset="UTF-8">
@@ -9,7 +9,7 @@ div
 <title>Lihan Production</title>
 </head>
 
-<body style="background-image:url(http://heartprintseducation.files.wordpress.com/2012/06/web-background-ver-1.jpg);font-family:Arial Rounded MT Bold;font-size:22px;div{cursor:url(smiley.gif),url(myBall.cur),auto;}">
+<body style="background-image:url(http://heartprintseducation.files.wordpress.com/2012/06/web-background-ver-1.jpg);font-family:Arial Rounded MT Bold;font-size:22px;">
 	<content>
 
 		<header>
