--- a/cultural analysis.html
+++ b/cultural analysis.html
@@ -11,7 +11,7 @@
 
 <body style="background-image:url(http://heartprintseducation.files.wordpress.com/2012/06/web-background-ver-1.jpg);font-family:Arial Rounded MT Bold;font-size:22px;">
 	<content>
-
+<!-- <div class="moto"><img src="img/wutw.png" width="619" height="331" alt="The Wildeness Downtown"/></div> -->
 		<header>
 		<h2>my portfolio</h2>
 		<ul id="nav" >
