--- a/index.html
+++ b/index.html
@@ -27,7 +27,31 @@
                         <p>Msu</p>                  
                         <p>South hubbard</p>
                         <p>Like Dogs (Lab!!!)</p>
-                        
+                        	<div id="left">
+		<img src="https://lh4.ggpht.com/jq_DUV3A_wiVLKMD4QUfNPwcvjE-qcM1iJMM5eXtbhs9Oswd00edvH9qCD-19Da4t8NkKe8=s114"/>
+		
+		</div>
+		<div id="right">
+		<table>
+			
+			<tr>
+			my friends	<td><img src="https://scontent-b-ord.xx.fbcdn.net/hphotos-prn1/p480x480/149408_442572722484840_1615685942_n.jpg"/></td>
+				<td><img src="https://scontent-a-ord.xx.fbcdn.net/hphotos-prn2/179401_191213854230220_2363254_n.jpg"/></td>
+			<td>	Heart shape Pork<img src="https://scontent-b-ord.xx.fbcdn.net/hphotos-ash4/183243_10150116911982162_4757896_n.jpg"/></td>
+			</tr>
+			<tr>
+				<td> Summer in shanghai<img src="https://scontent-a-ord.xx.fbcdn.net/hphotos-ash4/284336_242540275764244_2973447_n.jpg"/></td>
+				<td> Track Team<img src="https://scontent-a-ord.xx.fbcdn.net/hphotos-ash4/225338_1926952327969_4475090_n.jpg"/></td>
+				<td>With New Shirt!<img src="https://scontent-b-ord.xx.fbcdn.net/hphotos-ash4/313934_4633218901400_1204514670_n.jpg"/></td>
+		
+		</table>
+		</div>
+		<div id="footer">
+			<div id="button">
+				<p>Send me an <span class="bold">ben.zhulihang@gmail.com</span>!</p>
+			</div>
+		</div>
+	</body>
 		</main>
 		<footer>
 		<p>&copy; 2013 [Lihan Zhu]</p>
