--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<main>
 			<h1>about me</h1>
 			<p>My name is Lihan Zhu</p>
-                        <p>Frist time Hithub...</p>
+                        <p>Freshman</p>
                         <p>Msu</p>                  
                         <p>South hubbard</p>
                         <p>Like Dogs (Lab!!!)</p>
