--- a/cultural analysis.html
+++ b/cultural analysis.html
@@ -26,6 +26,48 @@
 		</ul>
 		</header>
 		<main>
+<!DOCTYPE HTML>
+<head>
+<meta name="description" content="Basic Portfolio">
+<meta name="author" content="name goes here">
+<meta charset="UTF-8">
+<link type="text/css" rel="stylesheet" href="style.css">
+<title>my portfolio</title>
+</head>
+<body>
+	<content>
+		<header>
+		<h1>my portfolio</h1>
+		<ul id="nav">
+			<li><a href="index.html">home</a></li>
+			<li><a href="lived.html">lived <br />experiences</a></li>
+			<li><a href="cultural.html">cultural <br />analysis</a></li>
+			<li><a href="#">formal <br />research</a></li>
+			<li><a href="#">remix</a></li>
+			<li><a href="#">course <br />retrospective</a></li>
+			<li><a href="#">blog</a></li>
+		</ul>
+		</header>
+		<div id="menu">
+			<ul>
+				<li><a href="cultural.html">Executive Summary</a></li>
+				<li><a href="cultural2.html">Introduction</a></li>
+				<li><a href="cultural3.html">Analysis of Artifact</a></li>
+				<li><a href="cultural4.html">Description of Issue</a></li>
+				<li><a href="cultural5.html">Proposed Solution</a></li>
+				<li><a href="cultural6.html">Anticipated Effects</a></li>
+				<li><a href="cultural7.html">Conclusion</a></li>
+			</ul>
+		</div>
+		<article>
+			<h1>Executive Summary</h1>
+			<p>Executive Summary goes here</p>
+		</article>
+		<footer>
+		<p>&copy; 2013 [Name goes here]</p>
+		</footer>
+	</content>
+</body>	
 <font color="black"><h1>Culture Analysis Proposal Activity</h1><img src="http://mediad.publicbroadcasting.net/p/wvtf/files/201304/cell-phones%20%26%20hands_0.jpg">
 <p><span>Since</span> people knew how to speak, we started to communicate. There is an advantage about human beings, we are never satisfied with current situations. Our solution to this problem is to approach sciences and the world alike with the ideology of always improving, even when our technologies seem up to date. </p>
 <p>People around the world have found different ways to communicate over time. Basic postal services, which primarily started around 550 B.C., took a drastic change when the Chinese developed a smoke signal system to transmit a message as far as 750 kilometers quick and efficiently. In 19th century America, Pony Express, a poster express on horseback was invented and reduced the time for messages to travel between the Atlantic and Pacific coasts to about ten days. After the development of semaphore, Morse code and typewriter, the telephone was invented in 1876 by Alexander Graham Bell. From there, the telephone was made mobile by John F. Mitchell and Dr. Martin Cooper, who created the first Motorola cellular device in 1973. Since then, communication via telephone has evolved immensely, and continues to grow until today. </p>
