--- a/cultural5.html
+++ b/cultural5.html
@@ -32,8 +32,11 @@
 			</ul>
 		</div>
 		<article>
-			<h1>Proposed Solution</h1>
-			<p>Proposed Solution goes here</p>
+			
+<h1>Proposed Solution and Conclusion</h1>
+		<p>Proposed Solution goes <p>Cellphone, this culture artifact has caused a serious problem and this problem would get worse if we don’t do anything.  People don’t know how to communicate anymore because of cellphone using. People are getting bad manners on talking because of cellphone using; College students are getting bad vocabulary and bad writing skill because of cellphone using; more and more teenagers are getting less outgoing. What should we do about this?
+<p>I don’t think we can absolutely avoid cellphone. Because cellphone has its good advantages. But we should always be aware to the bad consequences that the cellphone talking or texting would bring to us. We should use more complete words and sentences in texting to keep our vocabulary in shape. We should keep our good manner in cellphone talking either with friends or family. Also we need to do is to put down the cellphone sometimes and talk to people around by face to face. Do not only talk to your old friends for improving your social skills. While you are practicing your social skill with your old friends, you should try some new friends. It will help you a lot. As my experience, I am not a social person. After I came to MSU. I decided to be more social. I tried to talk to my new roommate and other new friends. I tried to spend a lot of quality time with real people instead of holding a phone. I feel a lot of better now than before. I start to realize face to face conversation is what I need to get out of shy and loneliness. What cellphone does to me is totally opposite. Comparing to cellphone communication, face to face conversation does require more time and certain places. We should not be lazy. We should go out and take our time to talk with each other face to face. The most important thing is make sure you have fun. I think you will have fun with the real conversation and you also will realize how beautiful this world is and how beautiful everyone is  after you walk out of the shadow of cellphone and start face to face conversation. </p></font>
+here</p>
 		</article>
 		<footer>
 		<p>&copy; 2013 [Name goes here]</p>
