--- a/cultural4.html
+++ b/cultural4.html
@@ -25,11 +25,9 @@
 				<li><a href="cultural.html">Executive Summary</a></li>
 				<li><a href="cultural2.html">Introduction</a></li>
 				<li><a href="cultural3.html">Analysis of Artifact</a></li>
-				<li><a href="cultural4.html">Description of Issue</a></li>
-				<li><a href="cultural5.html">Proposed Solution</a></li>
-				<li><a href="cultural6.html">Anticipated Effects</a></li>
-				<li><a href="cultural7.html">Conclusion</a></li>
-			</ul>
+				<li><a href="cultural4.html">Description of Issue and Anticipated Effects</a></li>
+				<li><a href="cultural5.html">Proposed Solution and the Conclusion</a></li>
+	</ul>
 		</div>
 		<article>
 			<h1>Description of Issue and Anticipated Effects</h1>
