--- a/cultural2.html
+++ b/cultural2.html
@@ -25,8 +25,8 @@
 				<li><a href="cultural.html">Executive Summary</a></li>
 				<li><a href="cultural2.html">Introduction</a></li>
 				<li><a href="cultural3.html">Analysis of Artifact</a></li>
-				<li><a href="cultural4.html">Description of Issue</a></li>
-				<li><a href="cultural5.html">Proposed Solution</a></li>
+				<li><a href="cultural4.html">Description of Issue and Anticipated Effects</a></li>
+				<li><a href="cultural5.html">Proposed Solution and The Conclusion</a></li>
 				<li><a href="cultural6.html">Anticipated Effects</a></li>
 				<li><a href="cultural7.html">Conclusion</a></li>
 			</ul>
