--- a/cultural analysis.html
+++ b/cultural analysis.html
@@ -21,7 +21,7 @@
 			
 <li><a href="lived.html">lived <br />experiences</a></li>
 			
-<li><a href="cultural.html">cultural <br />analysis</a></li>
+<li><a href="cultural analysis.html">cultural <br />analysis</a></li>
 			
 <li><a href="#">formal <br />research</a></li>
 			
