--- a/cultural analysis.html
+++ b/cultural analysis.html
@@ -55,7 +55,7 @@
 		
 </article>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [Lihan Zhu]</p>
 		</footer>
 	</content>
 </body>	
