--- a/cultural3.html
+++ b/cultural3.html
@@ -34,9 +34,10 @@
 
 <h1>Analysis of Artifact</h1>
 			<p>People around the world have found different ways to communicate over time. Basic postal services, which primarily started around 550 B.C., took a drastic change when the Chinese developed a smoke signal system to transmit a message as far as 750 kilometers quick and efficiently. In 19th century America, Pony Express, a poster express on horseback was invented and reduced the time for messages to travel between the Atlantic and Pacific coasts to about ten days. After the development of semaphore, Morse code and typewriter, the telephone was invented in 1876 by Alexander Graham Bell. From there, the telephone was made mobile by John F. Mitchell and Dr. Martin Cooper, who created the first Motorola cellular device in 1973. Since then, communication via telephone has evolved immensely, and continues to grow until today. </p><img src="http://mediad.publicbroadcasting.net/p/wvtf/files/201304/cell-phones%20%26%20hands_0.jpg">
-<p>In almost a generation, cell phones have become a fixture in our lives. We take our phones everywhere we go. Specifically, with a population of about 63 million in United States of America, there are an astonishing 81.6 million mobile subscriptions. </p>		</article>
+<p>In almost a generation, cell phones have become a fixture in our lives. We take our phones everywhere we go. Specifically, with a population of about 63 million in United States of America, there are an astonishing 81.6 million mobile subscriptions. </p>
+		</article>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [Lihan Zhu]</p>
 		</footer>
 	</content>
 </body>	
