--- a/cultural4.html
+++ b/cultural4.html
@@ -44,7 +44,7 @@ It is so frustrating, and each year this communication breakdown is getting wors
 .	<p>Cellphone, this culture artifact has caused a serious problem and this problem would get worse if we don't do anything.  People don't know how to communicate anymore because of cellphone using. People are getting bad manners on talking because of cellphone using; College students are getting bad vocabulary and bad writing skill because of cellphone using; more and more teenagers are getting less outgoing. What should we do about this?</p>		
 </article>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [Lihan Zhu]</p>
 		</footer>
 	</content>
 </body>	
