--- a/cultural5.html
+++ b/cultural5.html
@@ -37,7 +37,7 @@
 here</p>
 		</article>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [Lihan Zhu]</p>
 		</footer>
 	</content>
 </body>	
