--- a/cultural2.html
+++ b/cultural2.html
@@ -34,9 +34,10 @@
 <h1>Introduction</h1>
 			
 <p><span>Since</span> people knew how to speak, we started to communicate. There is an advantage about human beings, we are never satisfied with current situations. Our solution to this problem is to approach sciences and the world alike with the ideology of always improving, even when our technologies seem up to date.</p>
-		</article>
+
+</article>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [Lihan Zhu]</p>
 		</footer>
 	</content>
 </body>	
