--- a/cultural analysis.html
+++ b/cultural analysis.html
@@ -10,7 +10,7 @@
 <title>my portfolio</title>
 </head>
 <body>
-<body background="">
+<body background="http://www.mozilla.org/images/template/screen/bg_body_0.jpg">
 	<content>
 		<header>
 		
