--- a/cultural analysis.html
+++ b/cultural analysis.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <body background="http://www.mozilla.org/images/template/screen/bg_body_0.jpg">
-	<content>
+	<marquee behavior="scroll" direction="left" scrollamount="30"><img src="http://www.quackit.com/pix/web_graphics/free_website_graphics/clip_arts/bats_013.gif" width="125" height="82" alt="Flying Bat" /></marquee><content>
 		<header>
 		
 <h1>my portfolio</h1>
