--- a/cultural analysis.html
+++ b/cultural analysis.html
@@ -9,7 +9,7 @@
 
 <title>my portfolio</title>
 </head>
-<body style="font-family:cursive;font-size:22px;background-image:url(http://www.ngewall.com/images/2013/07/tolerated-cinematics-home-of-design-amp-motion-graphics-tc-smoke.jpg)">
+<body background="http://www.mozilla.org/images/template/screen/bg_body_0.jpg">
 	<marquee behavior="scroll" direction="left" scrollamount="30"><img src="http://www.quackit.com/pix/web_graphics/free_website_graphics/clip_arts/bats_013.gif" width="125" height="82" alt="Flying Bat" /></marquee><content>
 		<header>
 		
