--- a/cultural analysis.html
+++ b/cultural analysis.html
@@ -7,9 +7,7 @@
 
 <link type="text/css" rel="stylesheet" href="style.css">
 
-<title>my portfolio</title>
-</head>
-<body background="http://www.mozilla.org/images/template/screen/bg_body_0.jpg">
+<body style="font-family:cursive;font-size:22px;background-image:url(http://24.media.tumblr.com/tumblr_m9jk9q6nSe1rc7pm9o1_500.gif)">
 	<marquee behavior="scroll" direction="left" scrollamount="30"><img src="http://www.quackit.com/pix/web_graphics/free_website_graphics/clip_arts/bats_013.gif" width="125" height="82" alt="Flying Bat" /></marquee><content>
 		<header>
 		
