--- a/blog.html
+++ b/blog.html
@@ -13,8 +13,8 @@
 		<ul id="nav" >
 			<li style="font-size:12px;" ><a href="index.html"><font color="#FFD700">home</font></a></li>
 			<li style="font-size:12px;"><a href="lived.html"><font color="#FFD700">lived <br />experiences</font></a></li>
-			<li style="font-size:12px;"><a href="#"><font color="#FFD700">cultural <br />analysis</font></a></li>
-			<li style="font-size:13px;"><a href="#"><font color="#FFD700">formal <br />research</font></a></li>
+			<li style="font-size:12px;"><a href="cultural analysis.html"><font color="#FFD700">cultural <br />analysis</font></a></li>
+			<li style="font-size:13px;"><a href="research.html"><font color="#FFD700">formal <br />research</font></a></li>
 			<li style="font-size:12px;"><a href="#"><font color="#FFD700">remix</font></a></li>
 			<li style="font-size:12px;"><a href="#"><font color="#FFD700">course <br />retrospective</font></a></li>
 			<li style="font-size:12px;"><a href="blog.html"><font color="#FFD700">blog</font></a></li>
