--- a/research4.html
+++ b/research4.html
@@ -51,8 +51,7 @@
 			
 <p>Way of building knowledge in the physics class</p>
 
- 
-
+ <td><img src="https://scontent-a.xx.fbcdn.net/hphotos-ash3/1422516_607908002607792_712869485_n.jpg"/>	
 <p>It's important to recognize that physics is a problem-solving discipline. In the physics classroom, Physics professor always do is giving stress major themes and principles. One major goal for a physics student is that he will be able to apply these principles to understand and solve problems. Physics students should focus on the fact, that in a physics course, students are required to learn the skills for solving physics questions. </p>
 
 <p>Pre-view the physics textbook is a very good idea to start this discipline. Physics student should read the introduction of the chapter before the class as a preview. Skipping the small notes on the side of the textbook is not a good move. These notes always contain good example or ways to help student understand the language. Most professor have their own PowerPoint for each chapter. It will be very helpful if student can read the PowerPoint before the class.  Taking the course with a perspective early from the preview, reviewing important themes and principles again in the course will help a physics student build his physics language better. </p>
