--- a/research4.html
+++ b/research4.html
@@ -7,7 +7,7 @@
 
 <link type="text/css" rel="stylesheet" href="style.css">
 
-<body style="font-family:cursive;font-size:22px;background-image:url(http://24.media.tumblr.com/tumblr_m9jk9q6nSe1rc7pm9o1_500.gif)">
+<body style="font-family:cursive;font-size:22px;background-image:url(http://www.wallpaperfull.com/stockimage/abstract-surprising-black-paper-texture-background-hd-widescreen-background.jpg)">
 	<marquee behavior="scroll" direction="left" scrollamount="30"><img src="http://www.quackit.com/pix/web_graphics/free_website_graphics/clip_arts/bats_013.gif" width="125" height="82" alt="Flying Bat" /></marquee><content>
 		<header>
 		
