--- a/research.html
+++ b/research.html
@@ -38,7 +38,7 @@
 			
 	<li><a href="research4.html"> 4.Way of learning in Physics class and researches in physics </a></li>
 			
-	<li><a href="research5.html">5.Interview</a></li>
+	<li><a href="research5.html">5.Appendices</a></li>
 						
 	</ul>
 		</div>
