--- a/research5.html
+++ b/research5.html
@@ -54,7 +54,7 @@
 <p>Why do you like physics, this discipline? </p>
 <p>God creates the world. Physics helps me to know this world better. So I can know God better. </p>
 <p>What can I do after I graduate as a physics major student? </p>
-<p>It’s better for you to continue studying for PhD degree then get a job. It will be fine if you want to find a job without PhD degree, physics has a wide career range. Anything which is related to physics would give you an opportunity for a job. You can anticipate in building and structures, energy, transports, education all kind of fields. But it will easier to find a job with PhD degree. </p>
+<p>It's better for you to continue studying for PhD degree then get a job. It will be fine if you want to find a job without PhD degree, physics has a wide career range. Anything which is related to physics would give you an opportunity for a job. You can anticipate in building and structures, energy, transports, education all kind of fields. But it will easier to find a job with PhD degree. </p>
 <p>What Skills Do I Need to Study Physics? How can I improve my Physics? </p>
 <p>Mathematics will be a tool for Physics.  With good mathematics knowledge will help you to get better understanding in physics. </p>
 <p>All science are related. Study other fields of science, such as biology and chemistry will get you a different view of physics and understanding of it. </p>
@@ -62,16 +62,19 @@
 <p>Why do you choose physics as your major? </p>
 <p>I can still be a business man without learning business in college. But science major like physics will give you real knowledge which will go along with you for the whole life. </p>
 <p>Do you think physics is hard to learn? </p>
-<p>It depends on person. If you work hard and you have a good logical way of thinking. I don’t think it will be hard for you. </p>
+<p>It depends on person. If you work hard and you have a good logical way of thinking. I don't think it will be hard for you. </p>
 <p>How to learn physics better? </p>
 <p>You should take a good notes from the class for reviewing. Don’t ever copy homework from other. Physics needs your own way of thinking to solve the questions. You should do a lot of practice. Practice will help you to remember the way of solving questions. </p>
 <p> </P>
 <p> </P>
 <p> Works cited </p>
-
+<p>Stith, James H. "Careers for Physics Majors." Black Collegian 01 1993: 96. ProQuest. Web. 7 Nov. 2013 .</p>
+<p>Brekke, Stewart E. "Physics Classes, Career Choices, and Inner-City Schools." Physics Teacher 35 (2001)ProQuest. Web. 7 Nov. 2013.</p>
+<p><a herf="http://www.ph.utexas.edu/~turner/classes/HowToStudyPhysics.htm">"How to Study Physics"</a> by David R. Hubin and Charles Riddell, was published by the Learning Skills Center, Univ. of Texas at Austin, in 1977</p>
+<p><a herf="http://thompsonsclass.com/learninglog/2013/03/research-educational-technology-technology-in-the-physics-classroom/">Research Educational Technology-Technology in the Physics Classroom</a>by Scott Thompson on March 11, 2013</P>
 </article>
 		<footer>
 		<p>&copy; 2013 [Lihan Zhu]</p>
 		</footer>
 	</content>
-</body>	
+</body>
