--- a/research5.html
+++ b/research5.html
@@ -64,7 +64,7 @@
 <p>Do you think physics is hard to learn? </p>
 <p>It depends on person. If you work hard and you have a good logical way of thinking. I don't think it will be hard for you. </p>
 <p>How to learn physics better? </p>
-<p>You should take a good notes from the class for reviewing. Don’t ever copy homework from other. Physics needs your own way of thinking to solve the questions. You should do a lot of practice. Practice will help you to remember the way of solving questions. </p>
+<p>You should take a good notes from the class for reviewing. Don't ever copy homework from other. Physics needs your own way of thinking to solve the questions. You should do a lot of practice. Practice will help you to remember the way of solving questions. </p>
 <p> </P>
 <p> </P>
 <p> Works cited </p>
