--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			<li style="font-size:12px;"><a href="lived.html"><font color="#FFD700">lived <br />experiences</font></a></li>
 			<li style="font-size:12px;"><a href="cultural analysis.html"><font color="#FFD700">cultural <br />analysis</font></a></li>
 			<li style="font-size:13px;"><a href="research.html"><font color="#FFD700">formal <br />research</font></a></li>
-			<li style="font-size:12px;"><a href="#"><font color="#FFD700">remix</font></a></li>
-			<li style="font-size:12px;"><a href="#"><font color="#FFD700">course <br />retrospective</font></a></li>
+			<li style="font-size:12px;"><a href="remix.html"><font color="#FFD700">remix</font></a></li>
+			<li style="font-size:12px;"><a href="course.html"><font color="#FFD700">course <br />retrospective</font></a></li>
 			<li style="font-size:12px;"><a href="blog.html"><font color="#FFD700">blog</font></a></li>
 		</ul>
 		</header>
@@ -34,19 +34,23 @@
 			
 			<tr>
 			my friends	<td><img src="https://scontent-b-ord.xx.fbcdn.net/hphotos-prn1/p480x480/149408_442572722484840_1615685942_n.jpg"/></td>
-				<td><img src="https://scontent-a-ord.xx.fbcdn.net/hphotos-prn2/179401_191213854230220_2363254_n.jpg"/></td>
+	
 			<td>	Heart shape Pork<img src="https://scontent-b-ord.xx.fbcdn.net/hphotos-ash4/183243_10150116911982162_4757896_n.jpg"/></td>
 			</tr>
-			<tr>
+			
+<tr>
 				<td> Summer in shanghai<img src="https://scontent-a-ord.xx.fbcdn.net/hphotos-ash4/284336_242540275764244_2973447_n.jpg"/></td>
-				<td> Track Team<img src="https://scontent-a-ord.xx.fbcdn.net/hphotos-ash4/225338_1926952327969_4475090_n.jpg"/></td>
-				<td>With New Shirt!<img src="https://scontent-b-ord.xx.fbcdn.net/hphotos-ash4/313934_4633218901400_1204514670_n.jpg"/></td>
+				
+<td> Track Team<img src="https://scontent-a-ord.xx.fbcdn.net/hphotos-ash4/225338_1926952327969_4475090_n.jpg"/></td>
+
+
 		
 		</table>
 		</div>
 		<div id="footer">
 			<div id="button">
-				<p>Send me an <span class="bold">ben.zhulihang@gmail.com</span>!</p>
+				
+<p>Send me an <span class="bold">ben.zhulihang@gmail.com</span>!</p>
 			</div>
 		</div>
 	</body>
