--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
                         <p>Msu</p>                  
                         <p>South hubbard</p>
                         <p>Like Dogs (Lab!!!)</p>
+<a href="http://www.webpagecollection.com/christmas.html" target="_blank"><img src="http://webpagecollection.com/images/chri/01_1.gif" border="0" alt="Merry Christmas"></a><br><a href="http://www.webpagecollection.com/christmas.html" target="_blank" title="Myspace & Orkut Comments" >Myspace and Orkut Comments</a> from <a href="http://www.webpagecollection.com" target="_blank" title="Myspace Graphics, Orkut Comments, Flash Greetings and More" >www.webpagecollection.com</a><br><br>
                         	
 		<div id="right">
 		<table>
 	<tr>
 			
 <h2>my friends</h2>
-<td><img src="https://scontent-b-ord.xx.fbcdn.net/hphotos-prn1/p480x480/149408_442572722484840_1615685942_n.jpg"style="argin-right:100px"/></td>
+<td><img src="https://scontent-b-ord.xx.fbcdn.net/hphotos-prn1/p480x480/149408_442572722484840_1615685942_n.jpg"></td>
 	
 			<td>	<h2>Heart shape Pork</h2>
 <img src="https://scontent-b-ord.xx.fbcdn.net/hphotos-ash4/183243_10150116911982162_4757896_n.jpg"/></td>
