--- a/research.html
+++ b/research.html
@@ -7,7 +7,7 @@
 
 <link type="text/css" rel="stylesheet" href="style.css">
 
-<body style="font-family:cursive;font-size:22px;background-image:url(http://www.wallpaperfull.com/stockimage/abstract-surprising-black-paper-texture-background-hd-widescreen-background.jpg)">
+<body style="font-family:cursive;font-size:22px;background-image:url(http://4.bp.blogspot.com/-yVFG-zNg3z0/Uo0jZ7nsHJI/AAAAAAAACek/WOTVcIWNTRA/s1600/silent+night.jpg)">
 	
 <h1>my portfolio</h1>
 		<ul id="nav">
@@ -18,13 +18,13 @@
 			
 <li><a href="cultural analysis.html">cultural <br />analysis</a></li>
 			
-<li><a href="#">formal <br />research</a></li>
+<li><a href="research.html">formal <br />research</a></li>
 			
-<li><a href="#">remix</a></li>
+<li><a href="remix.html">remix</a></li>
 			
-<li><a href="#">course <br />retrospective</a></li>
+<li><a href="course.html">course <br />retrospective</a></li>
 
-<li><a href="#">blog</a></li>
+<li><a href="blog.html">blog</a></li>
 		</ul>
 		</header>
 		<div id="menu">
