--- a/work.html
+++ b/work.html
@@ -21,15 +21,17 @@
 		</ul>
 		</header>
 		<main>
-			<h1 style="color:yellow">It Gets Better</h1><div align="middle"><iframe width="480" height="360" src="//www.youtube.com/embed/KYa0wi4XzeI" frameborder="0" allowfullscreen></iframe></div>
-<p> The purpose of the is to express his love and miss on his uncle. He also wants to encouage gay people no matter now or later having difficulity should keep beliving in life. And he wants to tell them everything will get better!
-<p> Authur plays some shots of several blackborad with some sentences about what he is going to speech. Then he expresses his miss on his uncle by telling people his letteras a speech in the vedio. In another way to say is that author uses pictures first to give us a foresigh. Then he plays  his vedio speech for his main purpose</p>		
-<p> This Veido's structure teaches me that I can use different ways like writting, showing picture or music to express my purpose about my life experience project.<footer>
-		
+	<body>
+<li><a href="remix.html"><h2>Remix and Memo</h2></a></li>
+
+<h1>Works Cited</h1>
+"Collins English Dictionary | Always Free Online." Collinsdictionary.com, 2013. Web. 1 Dec 2013. <http://www.collinsdictionary.com/dictionary/english/nomophobia>.
+Microsoft Windows. Microsoft Windows Phone 7 Funny Smartphone Addicts Commercial. Digital video. 2013. Web. 1 Dec 2013 <http://www.youtube.com/watch?v=NU0zrVT9jv4>.
+Thailand DTAC. Disconnect To Connect - DTAC [HQ]. Digital video. 2013. Web. 1 Dec 2013 <http://www.youtube.com/watch?v=_AhTNx0AnSU>.
+Brea McGaffeye. Cell Phone Addiction: Reducing the Need. Digital video. 2011. Web. 1 Dec 2013 <http://www.youtube.com/watch?v=bxwYCKHimpY>.
+Zhu, Lihan. "Cultural Analysis Proposal." Zhulihan.github.io, 2013. Web. 1 Dec 2013. <http://zhulihan.github.io/template/cultural%20analysis.html>.
+</body>
 
 
-<h2>9/28/2013</h2>
-<h1 style="color:blue">The Social Network</hi?<div aligan="middle"><iframe width="560" height="315" src="//www.youtube.com/embed/lB95KLmpLR4" frameborder="0" allowfullscreen></iframe></div></main>
-<p>&copy; 2013 [Lihan Zhu]</p>
 		</footer>
 	</content
