--- a/cultural analysis.html
+++ b/cultural analysis.html
@@ -19,11 +19,11 @@
 			
 <li><a href="research.html">formal <br />research</a></li>
 			
-<li><a href="#">remix</a></li>
+<li><a href="remix.html">remix</a></li>
 			
-<li><a href="#">course <br />retrospective</a></li>
+<li><a href="course.html">course <br />retrospective</a></li>
 
-<li><a href="#">blog</a></li>
+<li><a href="blog.html">blog</a></li>
 		</ul>
 		</header>
 		<div id="menu">
