--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,10 @@
 			<li style="font-size:12px;"><a href="blog.html"><font color="#FFD700">blog</font></a></li>
 		</ul>
 		</header>
-		<body><p>9-7-13</P>
+<mean>		
+<body>
+
+<p>9-7-13</P>
 <h3>#1.First Day</h3>
 First day of the writing class. I want to tell everyone that I am not a good writer. I am kind of nervous about this class. I don't think it will be easy for me to get a good grade. This class is super long too. It will take more than an hour. After the first lesson, I start to realize besides writing, we need to create a website too. That sounds fun to me because I am very "good" at editing html!
 <p>9-12-13</p>
@@ -70,3 +73,4 @@ This time we were having a meeting for video typing a short film for our documen
 <h3>#15 Last day of the class</h3>
 <p> In this class, I learnt a lot thing about writing. I learnt how to make a website; I learnt how to write a research paper; I learnt how to video type a short film and make a short documentary. I think I had a good semester in this class. I made two friends Fatin and Joshua in this Class. I think WRA is fruitful for me. Last but not least, Merry Christmas!!!</p>
 </body>
+</mean>
